# SubTrackr

./: .prettierrc  App.tsx  README.md  jest.config.js  package-lock.json  package.json
.github/: dependabot.yml
contracts/: Cargo.toml  DEPLOYMENT.md
contracts/networks/: mainnet.env  testnet.env
contracts/proxy/: Cargo.toml
contracts/proxy/src/: lib.rs  storage.rs
contracts/proxy/test_snapshots/: integration_contract_deploys_and_state_persists.1.json  integration_cross_contract_call_charges_subscription.1.json  integration_multiple_contract_interactions_work.1.json  integration_uses_actual_token_contract_for_charges.1.json  upgrade_flow_preserves_state_and_enforces_timelocks.1.json  upgrade_validation_failure_does_not_change_implementation.1.json
contracts/proxy/tests/: integration_soroban.rs  upgrade_flow.rs
contracts/src/: lib.rs  revenue.rs
contracts/storage/: Cargo.toml
contracts/storage/src/: lib.rs
contracts/subscription/: Cargo.toml  FUZZING.md
contracts/subscription/src/: lib.rs  revenue.rs
contracts/test_snapshots/test/: test_admin_override_bypass.1.json  test_auto_resume.1.json  test_cancel_subscription.1.json  test_charge_paused_subscription.1.json  test_charge_subscription_not_due.1.json  test_create_plan_and_subscribe.1.json  test_double_subscribe.1.json  test_non_subscriber_cannot_cancel.1.json  test_pause_and_resume.1.json  test_pause_by_subscriber_limit_enforced.1.json  test_rate_limit_enforced_for_subscribe.1.json  test_refund_flow.1.json  (+1 more)
contracts/tests/: fuzz.rs  pricing_fuzz.rs  rate limit_fuzz.rs
contracts/types/: Cargo.toml
(+169 files in other folders)
